# mtg

./: .gitignore  Cargo.toml  README.md  smacofmajorization.py  tensormajorization.py
deckassistant/: Dockerfile  cloudbuild.yaml  lands.json  mtgmodule.py  server.py  standardalphabet.json  traindeckpredict.py  trainlandpredict.py
mtg-ml/: Dockerfile  loadmodel.py  standardalphabet.json  trainmodel.py
mtg-ml/majorization/: ml-majorization.py  mldecks_no_mutations.json  prediction.json
mtg-ml/majorization/majorization/: Cargo.toml
mtg-ml/majorization/majorization/src/: main.rs  plot.rs
nnmajorization/: decksandpositions.json  newmodel.py  predict.py  predicted.json  train.py
src/: main.rs  majorization.rs
src/actions/: draw.rs  fetchdata.rs  getdata.rs  mod.rs
src/structs/: deck.rs  deckposition.rs  mod.rs
src/unused/: cardcombos.rs  nnmajorization.rs
